--- a/assets/index.html
+++ b/assets/index.html
@@ -33,7 +33,8 @@
                 createTable('puzzleTable', n, cells);
                 createTable('depthTable', n, depthBFS);
                 setIterations(puzzle['Iterations']);
-                setSolution(puzzle['Fitness']);
+                setFitness(puzzle['Fitness']);
+                setSolution(puzzle['Solution']);
             }
 
             function getGenAlgoPuzzle() {
@@ -85,6 +86,11 @@
                 div.innerHTML = 'iterations: ' + numIter;
             }
 
+            function setFitness(fitness) {
+                var div = document.getElementById('fitness');
+                div.innerHTML = 'fitness: ' + fitness;
+            }
+
             function setSolution(solution) {
                 var div = document.getElementById('solution');
                 div.innerHTML = 'solution: ' + solution;
@@ -104,6 +110,7 @@
         <button onclick="getGenAlgoPuzzle()">GEN ALGO</button>
         <button onclick="getHillClimbPuzzle()">HILL CLIMBING</button>
         <div id="iterations" style="margin-top:40px"></div>
+        <div id="fitness"></div>
         <div id="solution"></div>
         <div id="puzzleTable" style="margin-top:40px"></div>
         <div id="depthTable" style="margin-top:40px"></div>
